<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Configuration forecast URL -->
    <string name="weather_fore_cast_url">https://api.forecast.io/forecast/</string>
    <!-- Application default title/name -->
    <string name="app_name">Weather Forecast</string>
    <!-- Weather preference -->
    <string name="action_settings_hourly">Hourly</string>
    <string name="action_settings_daily">Daily</string>
    <string name="action_settings_currently">Currently</string>
	<string name="action_settings_refresh">Refresh</string>

    <!-- Weather related items -->
    <string name="last_updated_time">Date &amp; Time</string>
    <string name="summary">Summary</string>
    <string name="nearestStormDistance">Nearest storm distance</string>
    <string name="temperature">Temperature</string>

    <string name="dewPoint">Dew Point</string>
    <string name="humidity">Humidity</string>
    <string name="windSpeed">Wind speed</string>
    <string name="visibility">Visibility</string>
    <string name="pressure">Pressure</string>
    <string name="ozone">Ozone</string>

    <string name="precipIntensity">Pre intensity</string>
    <string name="precipProbability">Pre probability</string>
    <string name="precipType">Pre type</string>

    <string name="temperatureMin">Temp min</string>
    <string name="temperatureMax">Temp max</string>

    <string name="apparentTemperature">Apparent temp</string>
    <string name="windBearing">Wind bearing</string>
    <string name="cloudCover">Cloud cover</string>

    <!-- Popup related strings -->
  	<string name="forecast_weather_popup_title">Weather</string>  
    <string name="please_wait">Please wait. Getting Weather details</string>
    <string name="stop">Stop</string>  
    <string name="close">Close</string>
    		
    <!-- Validation strings -->
    <string name="unknow_error">UnKnown error. Please try again</string>
    <string name="gps_location_error">Unable to get GPS location. Please enable GPS on your device</string>
    <string name="internet_not_available">"Sorry. Internet is NOT available"</string>
    <string name="gps_loation_is_not_available">"Your device GPS location is required to get an accurate results. Please grant an access"</string>
    
</resources>
